--- a/index.html
+++ b/index.html
@@ -4,41 +4,95 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página Principal</title>
+    <title>Wikipédia</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
 
-    <div>   
-        <div class="logo">
-            <img src="assets/images/logo.png" width="200"/>
-        </div>
-    </div>
+    <header>   
+        <figure class="logo">
+            <img src="assets/images/wikipedia-logo.png" width="200" alt="Wikipédia"/>
+        </figure>
+    </header>
 
     <div class="bar"></div>
 
-    <div class="content">
-        <div class="sidebar">
-            <h2>Título</h2>
+    <section class="content">
+        <aside class="sidebar">
+            <h2>Conteúdo</h2>
             <ul>
                 <li><a href="#">Links</a></li>
             </ul>
-        </div>
+        </aside>
 
-        <div class="main">
+        <main class="main">
+            <h1> Tudo sobre Magic: The Gathering</h1>
+            <p>Magic: the Gathering, MTG ou simplesmente Magic, é um jogo de cartas colecionáveis (TCG, Trading Card Game) criado por Richard Garfield, no qual os jogadores utilizam um baralho de cartas construído de acordo com o seu modo individual de jogo para tentar vencer o baralho adversário. Em 2003, na comemoração do aniversário de 10 anos de lançamento do Magic, a revista Games selecionou-o para o seu Hall da Fama. Criado em 1993, Magic foi o primeiro TCG produzido e continuado até hoje, quando conta com aproximadamente 12 milhões de jogadores ao redor do mundo.</p>
+
+            <h2>O Jogo</h2>
+            <p>Magic é um jogo de cartas de estratégia baseado em turnos, ou seja, cada jogador tem sua vez e, ao passar, o outro jogador tem sua vez e assim sucessivamente. Cada jogador deve ter um deck (Grimório) com qualquer número de cartas (mínimo 60 cartas, mas especialistas aconselham 60 cartas exatamente) e 20 pontos de vida. Tais regras podem variar de acordo com o formato. Por exemplo, no Commander, é preciso um baralho com exatos 100 cards, e os jogadores têm 40 pontos de vida, ao invés de 20.</p>
+            <p>O objetivo é derrotar o oponente. Para isso, existem 4 ocasiões em que se pode declarar um jogador derrotado:</p>
+            <ol>
+                <li>Quando os pontos de vida do jogador chegar a 0;</li>
+                <li>Quando um jogador for comprar uma carta e não tiver mais cartas em seu deck (Deck-Over);</li>
+                <li>Quando um efeito de uma carta disser que um jogador ganha o jogo, ou que o jogador perde o jogo;</li>
+                <li>Quando um jogador tiver 10 ou mais marcadores de veneno.</li>
+            </ol>
+            <p>Além dessas condições, em formatos específicos, existem outras formas de vencer a partida, como no formato Commander:</p>
+            <ol>
+                <li>Quando um jogador tiver 21 pontos de dano de combate de um único comandante.</li>
+            </ol>
+
+            <h3>Tipos de cartas</h3>
+            <p>No Magic temos 2 "Grandes tipos" de cartas: Permanentes e Não-permanentes.</p>
+            <p>As Permanentes são as cartas que, após serem usadas, permanecerão em jogo, ou seja, elas não serão descartadas. Os tipos de Permanentes são: Artefato, Criatura, Terreno, Encantamento , Batalha e Planinauta (Planeswalker).</p>
+            <p>As Não-permanentes são cartas que, após o seu uso, são enviadas ao Cemitério, ou seja, não permanecem em jogo após seu uso. Os tipos de Não-permanentes são: Mágica Instantânea e Feitiço.</p>
+
+            <h3>As áreas de jogo</h3>
+            <p>Durante um jogo de Magic existem determinadas zonas e cada uma tem um objetivo específico:</p>
+            <ol>
+                <li>Grimório ou deck: É o local onde ficam as cartas que você irá "comprar" durante o jogo.</li>
+                <li>Campo ou battlefield: É onde as permanentes ficam.</li>
+                <li>Cemitério: É para onde as permanentes destruídas e as não-permanentes vão.</li>
+                <li>Mão ou hand: São as cartas que você atualmente pode jogar pagando seus respectivos custos de Mana. Sua "Mão" deve sempre estar oculta para seu adversário (a não ser que uma carta diga o contrário), e você pode ter no máximo 7 cartas na mão (a não ser que uma carta diga o contrário) ao final do seu turno. Você deve descartar (enviar para o cemitério) o excedente de cartas. As cartas que irão para o cemitério dessa maneira ficam à escolha do jogador.</li>
+                <li>Pilha ou stack: É uma zona não física, onde as mágicas usadas são "empilhadas" e resolvidas, na ordem de que a última a ser jogada é a primeira a ser resolvida.</li>
+                <li>Exílio: É como um cemitério, a diferença é que as cartas que são exiladas não poderão ser devolvidas para o jogo (a não ser que uma carta diga o contrário), diferente das cartas no cemitério que apesar de não estarem sendo usadas ainda estão em jogo.</li>
+                <li>Zona de Comando: No formato Commander ou EDH, essa é a área fora de jogo que fica o seu comandante, até você pagar o seu custo de mana e colocá-lo em jogo.</li>
+            </ol>
+
+            <h2>As cinco cores</h2>
+            <p>No Magic, as cartas existem em cinco cores distintas: Branco, Azul, Preto, Vermelho e Verde. Existem ainda cartas incolores (artefatos e terrenos), assim como multicoloridas que são as cartas que têm mais de uma identidade de cor.</p>
+
+            <h3>Branco</h3>
+            <p>A mana Branca retira o seu poder das planícies, cuja teoria segue rigidamente. Representa a ordem, a justiça, proteção, a cura, a luz e a lei. No jogo, a cor branca apresenta-se como o equilíbrio, por possuir muitos recursos, muitos deles encontrados nas outras cores. Tem como sua grande fraqueza a quase completa falta de compras de cartas efetiva, o que a pode enfraquecer sem uma boa combinação com outras cores. Pode-se encontrar grandes criaturas e cartas com efeitos de controle, por exemplo, sendo a cor onde as mais poderosas remoções de campo se localiza. No entanto, esta é a cor típica onde também encontra-se cartas de proteção, prevenção e também ganho de vida.</p>
+            <h3>Azul</h3>
+            <p>A mana Azul retira o seu poder das ilhas e representa o controle dos elementos da água e do vento, o conhecimento, a ilusão e a astúcia. É também a magia do embuste, da enganação e da trapaça. A mana azul é conhecida como 'a cor de controle'.
+            A sua mecânica de controle passa pela permissão e manipulação, ou seja, pela capacidade de permitir ou não as jogadas do adversário. Azul é ainda a cor com mais capacidade de comprar cartas, retornar permanentes em jogo para a mão do seu dono, "millar" (enviar cartas diretamente do baralho para o cemitério) o adversário e tomar controle de permanentes do oponente.
+            Seu ponto fraco é a dificuldade para lidar com permanentes que já foram jogadas, não tendo forma de as destruir diretamente, podendo no entanto retorná-las a mão do seu dono, que é a sua única forma de remoção de campo efetiva.
+            As cartas dessa cor também são conhecidas pela capacidade que possuem de tomar o controle da partida, chegando ao ponto de fazer pressões psicológicas ao oponente. Normalmente, baralhos azuis conseguem apenas chegar ao seu objetivo muitos turnos após o início do jogo, por isso é uma cor de paciência e estratégia.</p>
+            <h3>Preto</h3>
+            <p>A mana Preta retira o seu poder dos pântanos, representa as trevas, a cobiça, a morte, a ambição desmedida e a busca pelo poder a qualquer preço. A cor preta tem a maior seleção de cartas dedicadas à destruição de criaturas do jogo. É também a cor típica de descarte e a capacidade de reutilizar criaturas no cemitério.
+            O jogador preto não olha os meios para atingir os seus fins, pelo que muitas das suas cartas mais poderosas exigem um sacrifício de vida ou de criaturas por parte do próprio. É uma cor autodestrutiva que procura apenas destruir o adversário ligeiramente mais depressa que a si mesma. A magia negra é muito poderosa, tendo em um de seus pontos fortes criaturas com a habilidade de "amedrontar", criaturas tão horrendas, que somente criaturas negras podem confrontar diretamente com elas. Tome muito cuidado ao manipular a magia preta, pois apesar de destruir seus oponentes muito rápido, ela pode destruir igualmente a mão que a manipula.</p>
+            <h3>Vermelho</h3>
+            <p>A mana Vermelha retira o seu poder das montanhas. Representa o fogo, a destruição, a impulsividade, a paixão, a liberdade e o caos. A cor vermelha é a mais rica em dano direto, na destruição de terrenos e artefatos e em criaturas que tem a habilidade de "ímpeto", e não sofrem o "enjoo de invocação", podendo atacar no mesmo turno em que são invocadas. O vermelho é a cor mais agressiva por natureza. Procura ganhar através da velocidade do seu ataque. A sua capacidade de se defender é como tal praticamente inexistente. É considerada a magia do mago impetuoso: sem pensar, sem medir, sem tempo de pena. Pode se dizer como se fosse o fogo queimando e consumindo seu oponente rapidamente a cada turno. A magia vermelha é simples: basta apenas gerar mana e mandar dano direto. Um bom exemplo são mágicas vermelhas que usam apenas uma mana para serem conjuradas e em seguida usam "X", sendo "X" o número de dano que o mago vai causar em seu oponente, ou seja, o mago usa uma mana para conjurar a magia e a quantidade de mana que ele puder, sendo essa quantidade o número de dano direto ao oponente.</p>
+            <h3>Verde</h3>
+            <p>A mana Verde retira o seu poder das florestas. Representa a natureza, a vida, o crescimento e a força bruta. Entre as cartas verdes encontram-se a maioria dos aceleradores de mana, assim como conectores para criar mana de outras cores, criaturas com grande poder e a habilidade de deixar suas criaturas mais fortes. Geralmente, a magia verde é usada por magos, que visa o poder da força que cresce a cada instante. O deck verde é considerado também como o deck dos "esmaga crânios", criaturas monstruosas e gigantescas, que crescem a cada turno. Com extrema habilidade, o mago verde faz com que suas pequenas criaturas se tornem verdadeiros gigantes, uma magia um pouco lenta no começo, mas que se torna forte a medida em que a batalha se desenvolve. Força bruta é a base desse deck. Na magia verde, a estratégia quase sempre se resume a esmagar seus oponentes como se fossem nada.</p>
+
+            <h2>Torneios e Competições</h2>
+            <p>Existem vários tipos de torneios sendo os principais, controlados pela DCI (Magic: The Gathering):</p>
             
-        </div>
+        </main>
 
-        <div class="anchors">
+        <nav class="anchors">
             <h2>Neste Artigo</h2>
             <ul>
                 <li><a href="#">Âncoras</a></li>
             </ul>
-        </div>
-    </div>
+        </nav>
+    </section>
 
-    <div class="footer">
+    <footer class="footer">
 
-    </div>
+    </footer>
 </body>
 </html>
