--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
         </aside>
 
         <main class="main">
-            <h1 class="magic">Tudo sobre Magic: The Gathering</h1>
+            <h1 id="magic">Tudo sobre Magic: The Gathering</h1>
             <p>Magic: the Gathering, MTG ou simplesmente Magic, é um jogo de cartas colecionáveis (TCG, Trading Card Game) criado por Richard Garfield, no qual os jogadores utilizam um baralho de cartas construído de acordo com o seu modo individual de jogo para tentar vencer o baralho adversário. Em 2003, na comemoração do aniversário de 10 anos de lançamento do Magic, a revista Games selecionou-o para o seu Hall da Fama. Criado em 1993, Magic foi o primeiro TCG produzido e continuado até hoje, quando conta com aproximadamente 12 milhões de jogadores ao redor do mundo.</p>
 
             <figure>
-                <a href="./assets/images/cardbinder.jpg" alt="Pasta com cartas"></a>
-                <caption>Pasta com cartas</caption>
+                <img src="./assets/images/cardbinder.jpg" alt="Pasta com cartas">
+                <figcaption>Pasta com cartas</figcaption>
             </figure>
 
-            <h2 class="game">O Jogo</h2>
+            <h2 id="game">O Jogo</h2>
             <p>Magic é um jogo de cartas de estratégia baseado em turnos, ou seja, cada jogador tem sua vez e, ao passar, o outro jogador tem sua vez e assim sucessivamente. Cada jogador deve ter um deck (Grimório) com qualquer número de cartas (mínimo 60 cartas, mas especialistas aconselham 60 cartas exatamente) e 20 pontos de vida. Tais regras podem variar de acordo com o formato. Por exemplo, no Commander, é preciso um baralho com exatos 100 cards, e os jogadores têm 40 pontos de vida, ao invés de 20.</p>
             <p>O objetivo é derrotar o oponente. Para isso, existem 4 ocasiões em que se pode declarar um jogador derrotado:</p>
             <ul>
@@ -67,7 +67,7 @@
                 <li>Zona de Comando: No formato Commander ou EDH, essa é a área fora de jogo que fica o seu comandante, até você pagar o seu custo de mana e colocá-lo em jogo.</li>
             </ul>
 
-            <h2 class="colors">As cinco cores</h2>
+            <h2 id="colors">As cinco cores</h2>
             <p>No Magic, as cartas existem em cinco cores distintas: Branco, Azul, Preto, Vermelho e Verde. Existem ainda cartas incolores (artefatos e terrenos), assim como multicoloridas que são as cartas que têm mais de uma identidade de cor.</p>
             <h3>Branco</h3>
             <p>A mana Branca retira o seu poder das planícies, cuja teoria segue rigidamente. Representa a ordem, a justiça, proteção, a cura, a luz e a lei. No jogo, a cor branca apresenta-se como o equilíbrio, por possuir muitos recursos, muitos deles encontrados nas outras cores. Tem como sua grande fraqueza a quase completa falta de compras de cartas efetiva, o que a pode enfraquecer sem uma boa combinação com outras cores. Pode-se encontrar grandes criaturas e cartas com efeitos de controle, por exemplo, sendo a cor onde as mais poderosas remoções de campo se localiza. No entanto, esta é a cor típica onde também encontra-se cartas de proteção, prevenção e também ganho de vida.</p>
@@ -84,7 +84,7 @@
             <h3>Verde</h3>
             <p>A mana Verde retira o seu poder das florestas. Representa a natureza, a vida, o crescimento e a força bruta. Entre as cartas verdes encontram-se a maioria dos aceleradores de mana, assim como conectores para criar mana de outras cores, criaturas com grande poder e a habilidade de deixar suas criaturas mais fortes. Geralmente, a magia verde é usada por magos, que visa o poder da força que cresce a cada instante. O deck verde é considerado também como o deck dos "esmaga crânios", criaturas monstruosas e gigantescas, que crescem a cada turno. Com extrema habilidade, o mago verde faz com que suas pequenas criaturas se tornem verdadeiros gigantes, uma magia um pouco lenta no começo, mas que se torna forte a medida em que a batalha se desenvolve. Força bruta é a base desse deck. Na magia verde, a estratégia quase sempre se resume a esmagar seus oponentes como se fossem nada.</p>
 
-            <h2 class="champ">Torneios e Competições</h2>
+            <h2 id="champ">Torneios e Competições</h2>
             <p>Existem vários tipos de torneios sendo os principais, controlados pela DCI (Magic: The Gathering):</p>
             <h3>Constructed (ou construído)</h3>
             <p>Nestes tipos de torneio, você deve competir com seu próprio deck, que deve estar montado antes do início do campeonato. Cada "deck" deve ter no mínimo 60 cartas. São torneios "Constructed" os seguintes formatos:</p>
@@ -123,13 +123,13 @@
             <p>Pro Tour (PT) é uma das maiores formas de jogo competitivo para o Magic: The Gathering. É constituída por uma série de torneios de pagamento realizado em todo o mundo, cada um exigindo um convite para participar. Todos os prêmios PT um total de $ 230.000 em prêmios, com $ 40.000 para o vencedor. O segundo colocado também recebe Pontos no ranking Pro Tour.</p>
             <p>O Ranking no Top 8 do Pro Tour é considerada a realização ideal dos jogadores mais competitivos Magic.Os jogadores profissionais são frequentemente comparados com o número de Pro Tour - Top 8 que acabam fazendo ao longo da sua carreira.</p>
 
-            <h2 class="banlist">Lista de cartas banidas e/ou restritas</h2>
+            <h2 id="banlist">Lista de cartas banidas e/ou restritas</h2>
             <p>Cartas banidas são cartas que estão proibidas de se jogar nos torneios. Cartas restritas são limitadas a uma cópia no deck. Periodicamente algumas cartas são retiradas e outras incluídas na lista a fim de evitar que estratégias fortes demais dominem os torneios</p>
 
-            <h2 class="creator">O criador</h2>
+            <h2 id="creator">O criador</h2>
             <p>Richard Garfield, designer do jogo, criou outros jogos famosos, como KeyForge, Battletech e Vampire: The Eternal Struggle.</p>
 
-            <h2 class="in-brazil">No Brasil</h2>
+            <h2 id="in-brazil">No Brasil</h2>
             <p>Em 1995, a Devir Livraria lançou Magic no Brasil.
             Em março de 2017, a 4ª Turma do Tribunal Regional Federal da 3ª Região decidiu que cartas de Magic deveria se equiparar a livros, com isso a Devir Livraria ficaria isenta da cobrança de PIS e COFINS. Esta decisão não foi erga omnes, sem efeito imediato sobre outras importações, tanto que a Coqui Distribuidora não foi isenta da cobrança em decisão de 2019.
             Em fevereiro de 2024, a Wizards of the Coast anunciou que iria descontinuar Dungeons & Dragons e Magic: The Gathering em português.</p>
@@ -151,7 +151,8 @@
     </section>
 
     <footer class="footer">
-
+        <p>Esta página foi editada pela última vez em 11 de Novembro de 2025.</p>
+        <p>Este texto é disponibilizado nos termos da licença Atribuição-CompartilhaIgual 4.0 Internacional (CC BY-SA 4.0) da Creative Commons; pode estar sujeito a condições adicionais. Para mais detalhes, consulte as condições de utilização.</p>
     </footer>
 </body>
 </html>
