--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
             </ul>
 
             <figure>
-                <img src="./assets/images/champ.png" alt="O jogo"/>
-                <figcaption>O jogo</figcaption>
+                <img src="./assets/images/champ.png" alt="O jogo de Magic: The Gathering"/>
+                <figcaption>O jogo de Magic: The Gathering</figcaption>
             </figure>
 
             <h2 id="colors">As cinco cores</h2>
@@ -137,8 +137,8 @@
             <p>Cartas banidas são cartas que estão proibidas de se jogar nos torneios. Cartas restritas são limitadas a uma cópia no deck. Periodicamente algumas cartas são retiradas e outras incluídas na lista a fim de evitar que estratégias fortes demais dominem os torneios</p>
 
             <figure>
-                <img src="./assets/images/magic-banlist.png" alt="Cartas Banidas de Magic: The Gathering"/>
-                <figcaption>Cartas Banidas e/ou restritas de Magic</figcaption>
+                <img src="./assets/images/magic-banlist.png" alt="Cartas fortes e raras de Magic: The Gathering"/>
+                <figcaption>Cartas fortes e raras de Magic: The Gathering</figcaption>
             </figure>
 
             <h2 id="creator">O criador</h2>
@@ -150,8 +150,8 @@
             Em fevereiro de 2024, a Wizards of the Coast anunciou que iria descontinuar Dungeons & Dragons e Magic: The Gathering em português.</p>
 
             <figure>
-                <img src="./assets/images/magic-in-br.png" alt="Magic no Brasil"/>
-                <figcaption>Magic no Brasil</figcaption>
+                <img src="./assets/images/magic-in-br.png" alt="Banner de Magic"/>
+                <figcaption>Banner de Magic</figcaption>
             </figure>
 
         </main>
